[tool.poetry]
name = "kaggle"
version = "0.0.1"
description = "Luke's Kaggle submissions"
readme = "README.md"
authors = []
homepage = "lukeshepard.com/kaggle"

[tool.poetry.dependencies]
python = ">3.8"
pandas = "^1.3.5"
spacy = "^3.2.1"
jupyter = "^1.0.0"
defopt = "^6.2.0"
sklearn = "^0.0"

[build-system]
requires = ["poetry>0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 120
